dim/spec/test_input/invalid_input/modules/yaml_syntax_invalid.dim
document: test

test_id:
  invalid: syntax: for: this: value:
